# routecause

./: .gitignore  BRIEF.md  DESIGN-DRAFT.md  LICENSE  Makefile  NOTES.md  PROVENANCE.md  README.md  RUBRIC.md  SESSION_LOG.md  pyproject.toml  session-log.md
routecause/: __init__.py  actuator.py  cli.py  config.py  fixes.py  kube.py  llm.py  orchestrator.py  prom.py  schema.py  service.py  store.py
routecause/collectors/: __init__.py  base.py  clusterstate.py  metrics.py  schedconfig.py
routecause/templates/: report.html
tests/: test_collectors.py  test_orchestrator.py  test_schema.py
workflow/: demo.sh  grade_scenario.py  run_all.sh  run_scenario.sh
